# dialogue_dinners_signal_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
dialogue_dinners_signal_bot/: cfl_commands.py  db_schema.py  main.py  service.py
